--- a/Makefile.in
+++ b/Makefile.in
@@ -496,7 +496,7 @@ FORTH_SRC = $(KERN_SRC) $(GFORTH_FI_DIST_SRC) $(EC_SRC) $(F_SRC)	      \
 	notfound.fs utf16.fs archive.fs cilk.fs fixfiles.fs bits.fs	      \
 	reverse-words.fs config.fs set-compsem.fs coverage.fs tokenize.fs     \
 	unix/opensles-vals.fs recognizer2.fs trigger-value.fs need.fs	      \
-	provides.fs defer-interpretation.fs
+	provides.fs deferring.fs
 
 GEN_SRC = standard-words.fs
 
