--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ before_script:
     - export BARCH=$(bash --version | grep -w bash | sed -e 's/.*(\([^ ]*\))$/\1/g')
     - ./configure --with-extra-libs --host=$BARCH --build=$BARCH
     - make distclean
-    - dpkg-buildpackage -uc -us -d -b -j1 -a$ARCH
+    - dpkg-buildpackage -uc -us -d -b -a$ARCH
     - mkdir -p debian/$DISTRIBUTION/$ARCH
     - rm -f debian/$DISTRIBUTION/$ARCH/*.deb
     - mv ../*.deb debian/$DISTRIBUTION/$ARCH/
